examples/cert-manager/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: cert-manager-example
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: echoserver
          image: ealen/echo-server
          ports:
            - name: http
              containerPort: 80
