examples/cert-manager/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: cert-manager-example
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
