examples/cert-manager/simple.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-simple

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: cert-manager-simple
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: echoserver
          image: ealen/echo-server
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: cert-manager-simple
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: cert-manager-simple
  annotations:
    cert-manager.io/cluster-issuer: dns-cluster-issuer
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - cert-manager-dns.api.itguyjournals.com
      secretName: cert-manager-dns-itguyjournals-com
  rules:
    - host: cert-manager-dns.api.itguyjournals.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
